# pixel-panels

./: .gitattributes  .gitignore  BillOfMaterials.xlsx  README.md  generate-certs.sh  requirements.txt  setup.cfg  setup.py
Electrical/: .gitignore
Electrical/PixelPanels/: PixelPanels.kicad_prl  PixelPanels.kicad_pro  PixelPanels.kicad_sch
Mechanical/STEP/: PanelDisplay.step
PanelDriver/: .gitignore  setup.cfg  setup.py
PanelDriver/certificates/: client.crt  client.p12  keystore.jks  panel_driver.crt  panel_driver_nopass.key  panel_service.csr  rootCA.crt  rootCA.srl  root_ca.key  server.crt  server.key  service_keystore.jks  web_client.crt  web_client.csr
PanelDriver/src/pixelpanels/: __init__.py  __main__.py  color.py  rpcclient.py  rpcserver.py
PanelDriver/src/pixelpanels/rpc_library/: panelrpc_pb2.py  panelrpc_pb2_grpc.py
PanelDriver/tests/: test_display.py
PanelService/: .gitignore  pom.xml
PanelService/RpcLibrary/: pom.xml
PanelService/RpcLibrary/proto/: panelrpc.proto
PanelService/SpringService/: pom.xml
PanelService/SpringService/src/main/resources/: application.properties
PanelService/SpringService/src/main/resources/certificates/: client.csr  panel_driver.csr  panel_service.p12  root_ca.crt  server_nopass.key
PanelService/SpringService/src/main/resources/static/: example.html
PanelService/SpringService/src/main/resources/templates/: image_upload.html
certs/: client.key  panel_driver.key  panel_service.crt  panel_service.ext  panel_service.key  panel_service_nopass.key  rootCA.key  server.csr  server.p12  truststore.jks  web_client.key  web_client.p12
deploy/: winScpPublish.script
src/pixelpanels/: __init__.py  __main__.py  color.py  display.py  panel.py
src/pixelpanels/mock_rpi_ws281x/: __init__.py  mock_rpi_ws281x.py
tests/: test_display.py
(+17 files in other folders)
