[metadata]
name = Pixelpanels
version = file: VERSION.txt
url = https://vincentbaier.com/
project_urls =
    Donate = https://vincentbaier.com/
    Documentation = https://vincentbaier.com/
    Changes = https://vincentbaier.com/
    Source Code = https://github.com/vincentbaier/pixelpanels/
    Issue Tracker = https://github.com/vincentbaier/pixelpanels/issues/
    Chat = https://discord.gg/pixelpanels
license = GPL 3
author = Vincent Baier
author_email = hire_me@vincentbaier.com
maintainer = Vincent Baier
maintainer_email = hire_me@vincentbaier.com
description = A small tool to run animations on WS2812B-based LED panel arrays.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Hardware Drivers

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
setup_requires =
    wheel

# Core dependencies are in setup.py because we must because OS level calls to identify if we are on a Raspberry Pi.
# All other platforms will run a mocked version of the pixel strip library.

[options.extras_require]
test =
    pytest >= 6.0
    pytest-mock >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pixelpanels = pixelpanels:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    pixelpanels
    tests

[coverage:paths]
source =
    src
    */site-packages